--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -4,6 +4,7 @@
     padding-left: 20px;
     padding-right: 20px;
     background-color: rgb(194, 245, 238);
+    font-size: 20px;
 }
 
 .categories {
